package obstaculos;

public class ColisaoException extends Exception {
    // Construtor da classe ColisaoException
    public ColisaoException(String message) {
        super(message);  
    }
    
}
