@startuml
!theme plain
skinparam class {
    BackgroundColor<<Class>> #D5E8D4
    BackgroundColor<<Enum>> #FFD966
    BackgroundColor<<Exception>> #FF9999
}

package obstaculos #FFF2CC {
    class Obstaculo {
        - área: Rectangle
        - tipo: TipoObstaculo
        + handleColisao()
        + dentroDosLimites()
    }

    enum TipoObstaculo <<Enum>> {
        POCA
        PEDRA
        PREDIO
        CACTO
    }

    class ColisaoException <<Exception>> {}
}

' External references
interface "Entidade" as Entidade #D4C2FC
class "Robo" as Robo #DAF7A6
class "Ambiente" as Ambiente #CCF2FF

' Relationships
Obstaculo ..|> Entidade
Obstaculo --> TipoObstaculo
Obstaculo ..> ColisaoException
Obstaculo ..> Robo: uses in handleColisao
Obstaculo ..> Ambiente: uses in setAmbiente
@enduml